# jira-github-chatbot

./: .env.example  README.md  main.py  pyproject.toml
config/: users.json
src/: app.py
src/api/: github_routes.py  jira_routes.py  routes.py
src/cli/: github_cli.py  jira_cli.py  main.py
src/services/: ai_tools.py  chatbot_service.py  github_service.py  jira_service.py  user_mapping.py
src/templates/: index.html
